fix use cases spacing a little bit

--- a/ansible-middleware-nextgen/src/App.css
+++ b/ansible-middleware-nextgen/src/App.css
@@ -163,7 +163,7 @@
 }
 
 .use-cases {
-  max-width: 30%;
+  max-width: 40%;
   padding-bottom: 30px;
 }
 
